--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,23 @@ hs_err_pid*
 .history
 
 # End of https://www.gitignore.io/api/java,intellij,visualstudiocode
+
+.idea
+out
+*.iml
+*.xml
+
+# if you have a mac
+.DS_Store
+
+.gradle
+/build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache 
