--- a/week-09/day-2/backendapi/src/main/resources/application.properties
+++ b/week-09/day-2/backendapi/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:mysql://localhost/apilog?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=password
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.logging.level.org.hibernate.SQL=debug
+spring.jpa.show-sql=true
 
